updated code element overflow issue

--- a/src/components/projects/ProjectPage.css
+++ b/src/components/projects/ProjectPage.css
@@ -11,8 +11,17 @@ table {
     border-collapse: collapse;
 }
 
+code {
+    white-space: pre-line;
+}
+
 th,
 td {
     padding: 6px 13px;
     border: 1px solid black;
+}
+
+img {
+    width: 80%; 
+    height: auto;
 }
